# robomealmate

./: my_map_save.pgm  my_map_save.yaml  my_map_serial.data
install/: local_setup.sh  setup.sh
install/diffdrive_arduino/include/diffdrive_arduino/: arduino_comms.h  config.h  diffdrive_arduino.h  wheel.h
install/diffdrive_arduino/share/diffdrive_arduino/: diffdrive_arduino_plugin.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/gazebo_ros2_control/include/gazebo_ros2_control/: gazebo_ros2_control_plugin.hpp  gazebo_system.hpp  gazebo_system_interface.hpp
install/gazebo_ros2_control/share/gazebo_ros2_control/: gazebo_hardware_plugins.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/gazebo_ros2_control_demos/lib/gazebo_ros2_control_demos/: example_diff_drive  example_effort  example_gripper  example_position  example_velocity
install/gazebo_ros2_control_demos/share/gazebo_ros2_control_demos/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robomealmate/share/robomealmate/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  (+3 more)
log/: latest_build  latest_list
src/arduino_controller/: robomealmate_controller.ino
src/diffdrive_arduino/: CMakeLists.txt  package.xml
src/diffdrive_arduino/include/diffdrive_arduino/: arduino_comms.h  config.h  diffdrive_arduino.h
src/diffdrive_arduino/src/: arduino_comms.cpp  diffdrive_arduino.cpp
src/robomealmate/: CMakeLists.txt
src/robomealmate/config/: controller.yaml  joystick.yaml  mapper_params_online_async.yaml  nav2_params.yaml  sim_mode_controller.yaml  twist_mux.yaml
src/robomealmate/description/: camera.xacro  gazebo_controller.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_controller.xacro
src/robomealmate/launch/: joystick.launch.py  lidar.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  robot.launch.py  rsp.launch.py  simulation.launch.py
src/robomealmate/worlds/: tables.world
(+130 files in other folders)
